--- a/index.html
+++ b/index.html
@@ -46,34 +46,34 @@
       </div>
     </div>
     <div id="main-content-wrapper">
+      <h2>Projects</h3>
       <div id="main-content">
         
         <div class="card card1">
           <h4>Ad Blocker</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
         </div>
         <div class="card card2">
           <h4>Browser Extension</h4>
+          <p>sed do eiusmod tempor incididunt ut labore et dolore magna</p>
         </div>
         <div class="card card3">
           <h4>Fibonacci Sequence</h4>
+          <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
         </div>
         <div class="card card4">
           <h4>Zork 3d</h4>
+          <p>laboris nisi ut aliquip ex ea commodo consequat irure dolor</p>
         </div>
         <div class="card card5">
           <h4>Virtual Reality Text Messaging </h4>
+          <p>Duis aute irure dolor in reprehenderit in voluptate velit esse</p>
         </div>
         <div class="card card6">
           <h4>The Witcher 3: Command Line Edition</h4>
+          <p>Excepteur sint occaecat cupidatat non proident, sunt</p>
         </div>
-        <div class="card card7">
-          <h4>Another Project</h4>
-        </div>
-        <div class="card card8">
-          <h4>Another Project</h4>
-        </div>
-        <div class="card card9">
-          <h4>Another Project</h4>
+
         </div>
       </div>
     </div>
